--- a/templates/climbguide/search.html
+++ b/templates/climbguide/search.html
@@ -5,7 +5,7 @@
     <form class="form-style" action="{% url 'search' %}" method="GET">
         <input type="search" name="q" placeholder="Search" value="{{query}}">
         <p>
-            <button type="submit">Search</button>
+            <button class="f6 grow no-underline br-pill ph3 pv2 mb2 dib white bg-dark-green" href="#0"type="submit">Search</button>
         </p>
     </form>
 
