--- a/templates/home.html
+++ b/templates/home.html
@@ -43,7 +43,7 @@
         </optgroup>
         </select></p>
     <div>
-        <button type="submit">Search</button>
+        <button class="f6 grow no-underline br-pill ph3 pv2 mb2 dib white bg-dark-green" href="#0"type="submit">Search</button>
     </div>
 </form>
 <div id='map' style='width: 400px; height: 300px;'></div>
