--- a/templates/users/profile.html
+++ b/templates/users/profile.html
@@ -21,21 +21,21 @@
         <form action ="{% url 'profile' %}" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             {{ form.as_p }}
-            <button type="submit">Update Profile</button>
+            <button class="f6 grow no-underline br-pill ph3 pv2 mb2 dib white bg-dark-green" href="#0"type="submit">Update Profile</button>
         </form>
     </div>
     <div id="form-two" class="hidden">
         <form action ="{% url 'add_daytrip' %}" method="POST">
             {% csrf_token %}
             {{ DaytripForm.as_p }}
-            <button type="submit">Add Trip</button>
+            <button class="f6 grow no-underline br-pill ph3 pv2 mb2 dib white bg-dark-green" href="#0"type="submit">Add Trip</button>
         </form>
     </div>
     <div id="form-three" class="hidden">
         <form action ="{% url 'add_pointofinterest' %}" method="POST">
             {% csrf_token %}
             {{ PointofinterestForm.as_p }}
-            <button type="submit">Add Point of Interest</button>
+            <button class="f6 grow no-underline br-pill ph3 pv2 mb2 dib white bg-dark-green" href="#0"type="submit">Add Point of Interest</button>
         </form>
     </div>
     <h3> My Trips</h3>
