--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
     <link rel='stylesheet' href='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.2.0/mapbox-gl-geocoder.css' type='text/css'/>
     <link rel="stylesheet" href="{% static 'css/style.css' %}"/>
     <link rel="stylesheet" href="{% static 'vendor/dragula/dragula.min.css' %}"/>
+    <link rel="stylesheet" href="https://unpkg.com/tachyons@4.12.0/css/tachyons.min.css"/>
     <title>{% block title %}ClimbGuide{% endblock %}</title>
 </head>
     <header>
