--- a/templates/climbguide/edit_daytrip.html
+++ b/templates/climbguide/edit_daytrip.html
@@ -66,11 +66,11 @@
 <p>Drag over routes to add them to your trip!</p>
 <div id="route-planning-container">
     <div class="route-planning-column">
-        <h3>Routes</h3>
-        <ul id="container1">
+        <h3 class="f4 bold center mw5">Routes</h3>
+        <ul id="container1" class="list pl0 ml0 center mw5 ba b--light-silver br3">
             {% for route in routes %}
                 {% if route not in planned_routes %}
-                <li data-routeid="{{ route.id }}">
+                <li data-routeid="{{ route.id }}" class="ph3 pv2 bb b--light-silver">
                     {{ route.name }} | {{ route.route_type }} | {{ route.rating }}
                 </li>
                 {% endif %}
@@ -80,12 +80,14 @@
         </ul>
     </div>
     <div class="route-planning-column">
-        <h3> {{ daytrip.title }} Routes</h3>
-        <ul id="container2" data-daytripid="{{ daytrip.id }}"><br><br>
+        <h3 class="f4 bold center mw5">{{ daytrip.title }} Routes</h3>
+        <ul id="container2" data-daytripid="{{ daytrip.id }}" class="list pl0 ml0 center mw5 ba b--light-silver br3">
                 {% for route in planned_routes %}
-                <li id="plannedRoute" data-routeid="{{ route.id }}">
+                <li id="plannedRoute" data-routeid="{{ route.id }}" class="ph3 pv2 bb b--light-silver">
                     {{ route.name }} | {{ route.route_type }} | {{ route.rating }}
                 </li>
+                {% empty %}
+                <li class="ph3 pv2 bb b--light-silver">Add a Route</li>
                 {% endfor %}
         </ul>
         <button id="send-routes-button">Add Routes</button>
