--- a/static/css/style.css
+++ b/static/css/style.css
@@ -19,22 +19,25 @@
 
 .form-style {
     font-family: inherit;
-    padding: 10px;
+    padding: 2rem;
+    color: rgba(0, 0, 0, .8);
 }
 
 .form-style label {
-	margin:0 0 3px 0;
-	padding:0px;
-	display: block;
+    font-size: .875rem;
     font-weight: bold;
-    color: rgb(255, 255, 255);
+    display: block;
+    margin-bottom: .5rem;
+    
 }
 
-.form-style input[type=text], .form-style input[type=search] {
-    box-shadow: 0 0 8px rgba(206, 150, 47, 0.884);
-    border: 1px solid rgba(206, 150, 47, 0.884);
-}
-
-.form-style input[type=file] {
-    color: rgb(255, 255, 255);
+.form-style input[type=text], .form-style input[type=search] input[type=file] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    border-style: solid;
+    border-width: 1px;
+    border-color: rgba(0, 0, 0, .2);
+    padding: .5rem;
+    margin-bottom: .5rem;
+    display: block;
 }
