--- a/templates/climbguide/add_poi_location.html
+++ b/templates/climbguide/add_poi_location.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 <body>
-<form method="post">
+<form class="form-style" method="post">
     {% csrf_token %}
     {{ form }}
     <input type="submit" value="submit">
