--- a/templates/climbguide/pointofinterest_detail.html
+++ b/templates/climbguide/pointofinterest_detail.html
@@ -1,9 +1,11 @@
 {% extends "base.html" %}
+
 {% block meta %}
 {% load mapbox_location_field_tags %}
 {% location_field_includes %}
 {% include_jquery %}
 {% endblock %}
+
 {% block content %}
 <h2>{{ pointofinterest.name }}</h2>
 {% for photo in photos %}
@@ -19,7 +21,7 @@
 {% if user.is_authenticated and user == pointofinterest.owner %}
 <button class="f6 grow no-underline br-pill ph3 pv2 mb2 dib white bg-dark-green" href="#0"type="submit" id="button-one">Edit Point of Interest</button>
 <div id="form-one" class="hidden">
-    <form action="{% url 'edit_pointofinterest' pointofinterest_pk=pointofinterest.pk %}"method="POST">
+    <form class="form-style" action="{% url 'edit_pointofinterest' pointofinterest_pk=pointofinterest.pk %}"method="POST">
         {% csrf_token %}
         {{ PointofinterestForm.as_p }}
         <div>
@@ -31,7 +33,7 @@
 {% endif %}
 <button class="f6 grow no-underline br-pill ph3 pv2 mb2 dib white bg-dark-green" href="#0"type="submit" id="button-two">Submit Photo</button>
 <div id="form-two" class="hidden">
-    <form action="{% url 'addphoto_to_pointofinterest' pointofinterest_pk=pointofinterest.pk %}" method="POST" enctype="multipart/form-data">
+    <form class="form-style" action="{% url 'addphoto_to_pointofinterest' pointofinterest_pk=pointofinterest.pk %}" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         {{ PhotoForm.as_p }}
         <div>
