--- a/templates/home.html
+++ b/templates/home.html
@@ -1,19 +1,13 @@
 {% extends 'base.html' %}
 {% block content %}
-<h2>Search Routes</h2>
-<form action="{% url 'home' %}" method="GET">
-    <input type="search" name="location" placeholder="Location" value="{{ location_query }}"/>
-    <input type="search" name="routetype" placeholder="Route Type" value="{{ route_type_query}}"/>
-    <p>
-        <button class="f6 grow no-underline br-pill ph3 pv2 mb2 dib white bg-dark-green" href="#0"type="submit">Search</button>
-    </p>
-    <p><label for="id_location">Route Location:</label> <input type="search" name="location" required id="id_location" value="{{ location_q }}" placeholder="Search Climing Areas"></p>
-    <p><label for="id_route_type">Route Type:</label> <select name="route_type" id="id_route_type" value="{{ route_type_q }}">
+<form class="form-style" action="{% url 'home' %}" method="GET">
+    <p><label for="id_location">Route Location</label> <input type="search" name="location" required id="id_location" value="{{ location_q }}" placeholder="Search Climing Areas"></p>
+    <p><label for="id_route_type">Route Type</label> <select name="route_type" id="id_route_type" value="{{ route_type_q }}">
     <option value="trad" selected>trad</option>
     <option value="sport">sport</option>
     <option value="boulder">boulder</option>
     </select></p>
-    <p><label for="id_rating">Route Difficulty:</label> <select name="rating" id="id_rating" value="{{ rating_q }}">
+    <p><label for="id_rating">Route Difficulty</label> <select name="rating" id="id_rating" value="{{ rating_q }}">
         <optgroup label="Trad/Sport Rating">
             <option value="5.4" selected>5.4</option>
             <option value="5.5">5.5</option>
