Styling for pop-ups are done. Need to center Mapbox

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -41,3 +41,9 @@
     margin-bottom: .5rem;
     display: block;
 }
+
+#map {
+    border-style: double;
+    border-color: black;
+    border-width: thick;
+}
