Cards for pop-ups and route detail are available plus border for mapbox

--- a/templates/climbguide/daytrip_detail.html
+++ b/templates/climbguide/daytrip_detail.html
@@ -66,7 +66,7 @@
                 <div class="pa2 bt b--black-20">
                 <a class="f6 db link dark-blue hover-blue" href="#">${route.name}</a>
                 <p class="f6 gray mv1">${route.route_type} | ${route.rating}</p>
-                <a class="link tc ph3 pv1 db bg-animate bg-dark-blue hover-bg-blue white f6 br1" href="#">${route.pk}</a>
+                <a class="link tc ph3 pv1 db bg-animate bg-dark-blue hover-bg-blue white f6 br1" href="/routes/detail/${route.pk}">See this Route!</a>
                 </div>
                 </article>`
             var customPopUp = new mapboxgl.Popup({
