--- a/templates/climbguide/daytrip_detail.html
+++ b/templates/climbguide/daytrip_detail.html
@@ -7,8 +7,8 @@
     {{ daytrip.description }}<br>
 </div><br>
 <div>
-    <a href="{% url 'edit_daytrip' daytrip_pk=daytrip.pk%}"><button class="f6 grow no-underline br-pill ph3 pv2 mb2 dib white bg-dark-green" href="#0"type="submit">Update Trip</button></a>
-    <a href="{% url 'delete_daytrip' daytrip_pk=daytrip.pk %}"><button class="f6 grow no-underline br-pill ph3 pv2 mb2 dib white bg-dark-green" href="#0"type="submit">Delete Trip</button></a>
+    <a href="{% url 'edit_daytrip' daytrip_pk=daytrip.pk%}"><button class="f6 grow no-underline br-pill ph3 pv2 mb2 dib white bg-dark-green" type="submit">Update Trip</button></a>
+    <a href="{% url 'delete_daytrip' daytrip_pk=daytrip.pk %}"><button class="f6 grow no-underline br-pill ph3 pv2 mb2 dib white bg-dark-green" type="submit">Delete Trip</button></a>
 </div><br>
 
 <div id='map' style='width: 400px; height: 300px;'></div>
@@ -33,13 +33,13 @@
                     <textarea id="log" placeholder="Write about your trip!"></textarea>
                 </div>   
                 <div>
-                    <button type="submit">Submit Log</button>
+                    <button class="f6 grow no-underline br-pill ph3 pv2 mb2 dib white bg-dark-green" type="submit">Submit Log</button>
                 </div>
             </form>
         </div>
         <ul id="current-logs" class="list pl0 ml0 center mw5 ba b--light-silver br3">
         {% for log in logs %}
-            <li class="ph3 pv2 bb b--light-silver">{{ log.text }}<h6>{{ log.date_added }}</h6></li>
+            <li class="ph3 pv2 bb b--light-silver">{{ log.text }}<h6>{{ log.date_added }} <a id="delete" class="no-underline" data-logid="{{ log.id }}" href="#">&#128465;</a></h6></li>
         {% empty %}
             <li id="no-logs-message">Write an entry!</li>
         {% endfor %}
@@ -129,12 +129,14 @@
             console.log("bounds updated!")
         })
 
-    // Log
+    // Log Feature
     const log = document.querySelector("#log")
     const logForm = document.querySelector("#daytrip-log-form")
     const currentLogs = document.querySelector("#current-logs")
     const emptyLogMessage = document.querySelector("#no-logs-message")
-
+    const deleteLogButton = document.querySelectorAll("#delete")
+    
+    // Event to add a log
     logForm.addEventListener("submit", function (event) {
         event.preventDefault()
         let logData = log.value
@@ -162,8 +164,8 @@
     }
 
     var sendLog = function (logObject) {
-        const daytrip_pk = logForm.dataset.daytripid
-        const url = `/daytrips/detail/${daytrip_pk}/addlog/`
+        var daytrip_pk = logForm.dataset.daytripid
+        var url = `/daytrips/detail/${daytrip_pk}/addlog/`
         fetch(url, {
             method: "POST",
             body: JSON.stringify(logObject),
@@ -174,6 +176,42 @@
         })
         .then(res => res.json())
         .then(data => console.log(data))
+    }
+
+// Event to delete a log
+    deleteLogButton.addEventListener("click", function (event) {
+        event.preventDefault()
+        let log_pk = deleteLogButton.dataset.logid
+        console.log(log_pk)
+        var pkObject = makePkObject(log_pk)
+        console.log(pkObject)
+        sendLogPk(pkObject)
+
+        if ({"logDeleted": true}) {
+            deleteLogButton.parentElement.parentElement.classList.add("hidden")
+        }
+    })
+
+    var makePkObject = function (log_pk) {
+        return {
+            pk : log_pk
+        }
+    }
+
+    var sendLogPk = function (pkObject) {
+        var daytrip_pk = logForm.dataset.daytripid
+        console.log(daytrip_pk)
+        // var url = `/daytrips/detail/${daytrip_pk}/deletelog/`
+        // fetch(url, {
+        //     method: "POST",
+        //     body: JSON.stringify(pkObject),
+        //     headers: {
+        //         'Content-Type': 'application/json; charset=UTF-8',
+        //         'Accept': 'application/json; charset=UTF-8'
+        //     }
+        // })
+        // .then(res => res.json())
+        // .then(data => console.log(data))
     }
 </script>
 {% endblock scripts%}
