styling update, dom still wants to run twice

--- a/templates/climbguide/daytrip_detail.html
+++ b/templates/climbguide/daytrip_detail.html
@@ -24,8 +24,8 @@
         </ul>
     </div>
     <div class="flex-column">
-        <h3>Log</h3>
-        <button id="button-one">Write Log Entry</button>
+        <h3 class="f4 bold center mw5">Log</h3>
+        <button id="button-one" class="f6 grow no-underline br-pill ph3 pv2 mb2 dib white bg-dark-green">Write Log Entry</button>
         <div id="form-one" class="hidden">
             <form id="daytrip-log-form" data-daytripid="{{ daytrip.id }}" class="form-style">
                 <div>
