Everything on the page is now centered

--- a/templates/base.html
+++ b/templates/base.html
@@ -35,6 +35,7 @@
     </nav>
     {% endblock %}
   </header>
+  <div id="content">
     <body>
         {% block content %}
         {% endblock %}
@@ -43,4 +44,5 @@
         {% block scripts %}
         {% endblock scripts %}
     </body>
+  </div>
 </html>
