--- a/templates/climbguide/edit_daytrip.html
+++ b/templates/climbguide/edit_daytrip.html
@@ -111,13 +111,17 @@ var map = new mapboxgl.Map({
     center: [-80.793457, 35.782169],
     zoom: 4,
 })
+// Compass
+var nav = new mapboxgl.NavigationControl();
+map.addControl(nav, 'top-left');
 // Fullscreen Feature
 map.addControl(new mapboxgl.FullscreenControl());
 // Add geolocate control to the map.
 map.addControl(
     new mapboxgl.GeolocateControl({
     positionOptions: {
-        enableHighAccuracy: true
+        enableHighAccuracy: true,
+        showAccuracyCircle: true
     },
     trackUserLocation: true
     })
