--- a/templates/home.html
+++ b/templates/home.html
@@ -51,6 +51,7 @@
 </ul>
 
 {{ route_info|json_script:"route_info" }}
+{{ poi_info|json_script:"poi_info" }}
 
 {% block scripts %}
 <script>
@@ -84,8 +85,39 @@ console.log("map loaded!")
 // Get data, load to map, set markers, and initalize bounding varibales
 document.addEventListener("DOMContentLoaded", (e) => {
     const route_info = JSON.parse(document.getElementById("route_info").textContent)
+    const poi_info = JSON.parse(document.getElementById("poi_info").textContent)
     var latitudeList = []
     var longitudeList = []
+
+    // Poi Popus Creation
+    for (let i = 0; i < poi_info.length; i++) {
+        let poi = poi_info[i]
+        console.log(poi.name)
+        var html =  `<article class="hide-child relative ba b--black-20 mw5 center">
+                <img src="https://scontent.flhr3-1.fna.fbcdn.net/v/t1.0-1/p320x320/10419949_10105372167674736_5929675618317299881_n.jpg?oh=fa3bbf4311e61e4637b67ef3be89479f&oe=58C28705" class="db" alt="Photo of Route" />
+                <div class="pa2 bt b--black-20">
+                <a class="f6 db link dark-blue hover-blue" href="#">${poi.name}</a>
+                <p class="f6 gray mv1">${poi.category}</p>
+                <p class="f6 gray mv1">${poi.information}</p>
+                <a class="link tc ph3 pv1 db bg-animate bg-dark-blue hover-bg-blue white f6 br1" href="/routes/detail/${poi.pk}">See this Point of Interest!</a>
+                </div>
+                </article>`
+        var customPopUp = new mapboxgl.Popup({
+            anchor: "bottom",
+            offset: { "bottom" : [0, -10]},
+            closeOnClick: false
+        }).setHTML(html);
+
+        let color = "blue"
+        var marker = new mapboxgl.Marker(
+            {color: color}
+        )
+            .setLngLat([poi.longitude, poi.latitude])
+            .setPopup(customPopUp)
+            .addTo(map);
+    }
+
+    // Route Popups Creation
     for (let i = 0; i < route_info.length; i++) {
         let route = route_info[i]
         latitudeList.push(route.latitude)
@@ -96,7 +128,7 @@ document.addEventListener("DOMContentLoaded", (e) => {
                 <div class="pa2 bt b--black-20">
                 <a class="f6 db link dark-blue hover-blue" href="#">${route.name}</a>
                 <p class="f6 gray mv1">${route.route_type} | ${route.rating}</p>
-                <a class="link tc ph3 pv1 db bg-animate bg-dark-blue hover-bg-blue white f6 br1" href="/routes/detail/${route.pk}">See This Route!</a>
+                <a class="link tc ph3 pv1 db bg-animate bg-dark-blue hover-bg-blue white f6 br1" href="/routes/detail/${route.pk}">See this Route!</a>
                 </div>
                 </article>`
         var customPopUp = new mapboxgl.Popup({
