--- a/templates/climbguide/daytrip_detail.html
+++ b/templates/climbguide/daytrip_detail.html
@@ -50,7 +50,6 @@
 {{ route_info|json_script:"route_info" }}
 {{ poi_info|json_script:"poi_info" }}
 
-{% block scripts %}
 <script>
     // Initalize bounding variables
     var minLongitude
@@ -95,7 +94,7 @@
                 <a class="f6 db link dark-blue hover-blue" href="#">${poi.name}</a>
                 <p class="f6 gray mv1">${poi.category}</p>
                 <p class="f6 gray mv1">${poi.information}</p>
-                <a class="link tc ph3 pv1 db bg-animate bg-dark-blue hover-bg-blue white f6 br1" href="/routes/detail/${poi.pk}">See this Point of Interest!</a>
+                <a class="link tc ph3 pv1 db bg-animate bg-dark-blue hover-bg-blue white f6 br1" href="/pointsofinterest/detail/${poi.pk}">See this Point of Interest!</a>
                 </div>
                 </article>`
         var customPopUp = new mapboxgl.Popup({
@@ -257,5 +256,4 @@
         .then(data => console.log(data))
     }
 </script>
-{% endblock scripts%}
 {% endblock %}
