--- a/templates/home.html
+++ b/templates/home.html
@@ -40,7 +40,7 @@
         <button class="f6 grow no-underline br-pill ph3 pv2 mb2 dib white bg-dark-green" href="#0"type="submit">Search</button>
     </div>
 </form>
-<div id='map' style='width: 400px; height: 300px;'></div>
+<div id='map' style='width: 500px; height: 450px;'></div>
 <h2 class="f4 bold center mw5">Routes</h2>
 <ul class="list pl0 ml0 center mw5 ba b--light-silver br3">
     {% for route in routes %}
@@ -100,7 +100,7 @@ document.addEventListener("DOMContentLoaded", (e) => {
         var html =  `<article class="hide-child relative ba b--black-20 mw5 center">
                 <img src="https://scontent.flhr3-1.fna.fbcdn.net/v/t1.0-1/p320x320/10419949_10105372167674736_5929675618317299881_n.jpg?oh=fa3bbf4311e61e4637b67ef3be89479f&oe=58C28705" class="db" alt="Photo of Route" />
                 <div class="pa2 bt b--black-20">
-                <a class="f6 db link dark-blue hover-blue" href="#">${poi.name}</a>
+                <p class="f6 dark-blue mv1">${poi.name}</p>
                 <p class="f6 gray mv1">${poi.category}</p>
                 <p class="f6 gray mv1">${poi.information}</p>
                 <a class="link tc ph3 pv1 db bg-animate bg-dark-blue hover-bg-blue white f6 br1" href="/routes/detail/${poi.pk}">See this Point of Interest!</a>
@@ -130,7 +130,7 @@ document.addEventListener("DOMContentLoaded", (e) => {
         var html =  `<article class="hide-child relative ba b--black-20 mw5 center">
                 <img src="https://scontent.flhr3-1.fna.fbcdn.net/v/t1.0-1/p320x320/10419949_10105372167674736_5929675618317299881_n.jpg?oh=fa3bbf4311e61e4637b67ef3be89479f&oe=58C28705" class="db" alt="Photo of Route" />
                 <div class="pa2 bt b--black-20">
-                <a class="f6 db link dark-blue hover-blue" href="#">${route.name}</a>
+                    <p class="f6 dark-blue mv1">${route.name}</p>
                 <p class="f6 gray mv1">${route.route_type} | ${route.rating}</p>
                 <a class="link tc ph3 pv1 db bg-animate bg-dark-blue hover-bg-blue white f6 br1" href="/routes/detail/${route.pk}">See this Route!</a>
                 </div>
