--- a/templates/home.html
+++ b/templates/home.html
@@ -1,45 +1,47 @@
 {% extends 'base.html' %}
 {% block content %}
-<form class="form-style" action="{% url 'home' %}" method="GET">
-    <p><label for="id_location">Route Location</label> <input type="search" name="location" required id="id_location" value="{{ location_q }}" placeholder="Search Climing Areas"></p>
-    <p><label for="id_route_type">Route Type</label> <select name="route_type" id="id_route_type" value="{{ route_type_q }}">
-    <option value="trad" selected>trad</option>
-    <option value="sport">sport</option>
-    <option value="boulder">boulder</option>
-    </select></p>
-    <p><label for="id_rating">Route Difficulty</label> <select name="rating" id="id_rating" value="{{ rating_q }}">
-        <optgroup label="Trad/Sport Rating">
-            <option value="5.4" selected>5.4</option>
-            <option value="5.5">5.5</option>
-            <option value="5.6">5.6</option>
-            <option value="5.7">5.7</option>
-            <option value="5.8">5.8</option>
-            <option value="5.9">5.9</option>
-            <option value="5.10">5.10</option>
-            <option value="5.11">5.11</option>
-            <option value="5.12">5.12</option>
-            <option value="5.13">5.13</option>
-            <option value="5.14">5.14</option>
-            <option value="5.15">5.15</option>
-        </optgroup>
-        <optgroup label="Boulder Rating">
-            <option value="V0">V0</option>
-            <option value="V1">V1</option>
-            <option value="V2">V2</option>
-            <option value="V3">V3</option>
-            <option value="V4">V4</option>
-            <option value="V5">V5</option>
-            <option value="V6">V6</option>
-            <option value="V7">V7</option>
-            <option value="V8">V8</option>
-            <option value="V9">V9</option>
-            <option value="V10">V10</option>
-        </optgroup>
+<div class="center mw5">
+    <form class="form-style" action="{% url 'home' %}" method="GET">
+        <p><label for="id_location">Route Location</label> <input type="search" name="location" required id="id_location" value="{{ location_q }}" placeholder="Search Climing Areas"></p>
+        <p><label for="id_route_type">Route Type</label> <select name="route_type" id="id_route_type" value="{{ route_type_q }}">
+        <option value="trad" selected>trad</option>
+        <option value="sport">sport</option>
+        <option value="boulder">boulder</option>
         </select></p>
-    <div>
-        <button class="f6 grow no-underline br-pill ph3 pv2 mb2 dib white bg-dark-green" href="#0"type="submit">Search</button>
-    </div>
-</form>
+        <p><label for="id_rating">Route Difficulty</label> <select name="rating" id="id_rating" value="{{ rating_q }}">
+            <optgroup label="Trad/Sport Rating">
+                <option value="5.4" selected>5.4</option>
+                <option value="5.5">5.5</option>
+                <option value="5.6">5.6</option>
+                <option value="5.7">5.7</option>
+                <option value="5.8">5.8</option>
+                <option value="5.9">5.9</option>
+                <option value="5.10">5.10</option>
+                <option value="5.11">5.11</option>
+                <option value="5.12">5.12</option>
+                <option value="5.13">5.13</option>
+                <option value="5.14">5.14</option>
+                <option value="5.15">5.15</option>
+            </optgroup>
+            <optgroup label="Boulder Rating">
+                <option value="V0">V0</option>
+                <option value="V1">V1</option>
+                <option value="V2">V2</option>
+                <option value="V3">V3</option>
+                <option value="V4">V4</option>
+                <option value="V5">V5</option>
+                <option value="V6">V6</option>
+                <option value="V7">V7</option>
+                <option value="V8">V8</option>
+                <option value="V9">V9</option>
+                <option value="V10">V10</option>
+            </optgroup>
+            </select></p>
+        <div>
+            <button class="f6 grow no-underline br-pill ph3 pv2 mb2 dib white bg-dark-green" href="#0"type="submit">Search</button>
+        </div>
+    </form>
+</div>
 <div id='map' style='width: 500px; height: 450px;'></div>
 <h2 class="f4 bold center mw5">Routes</h2>
 <ul class="list pl0 ml0 center mw5 ba b--light-silver br3">
