update search functionality, fixed bugs, and updated stylingg

--- a/templates/base.html
+++ b/templates/base.html
@@ -32,6 +32,7 @@
       <a class="f6 f5-l link bg-animate black-80 hover-bg-light-pink dib pa3 ph4-l" href="{% url 'account_logout' %}">Logout</a>
       {% else %}
       <a class="f6 f5-l link bg-animate black-80 hover-bg-light-yellow dib pa3 ph4-l" href="{% url 'account_login' %}">Login</a>
+      <a class="f6 f5-l link bg-animate black-80 hover-bg-light-green dib pa3 ph4-l" href="{% url 'account_signup' %}">Sign Up</a>
     {% endif %}
     </nav>
     {% endblock %}
