--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,22 +13,20 @@
     flex-direction: column;
     flex-grow: 0;
     flex-shrink: 0;
-    flex-basis: 25%;
+    flex-basis: 50%;
     padding: 10px;
 }
 
 .form-style {
     font-family: inherit;
-    padding: 2rem;
     color: rgba(0, 0, 0, .8);
+    display: inline-block;
 }
 
 .form-style label {
     font-size: .875rem;
     font-weight: bold;
-    display: block;
-    margin-bottom: .5rem;
-    
+    margin-bottom: .5rem;    
 }
 
 .form-style input[type=text], .form-style input[type=search] input[type=file] {
@@ -39,7 +37,6 @@
     border-color: rgba(0, 0, 0, .2);
     padding: .5rem;
     margin-bottom: .5rem;
-    display: block;
 }
 
 #map {
