--- a/templates/climbguide/edit_daytrip.html
+++ b/templates/climbguide/edit_daytrip.html
@@ -23,16 +23,21 @@
 </div>
 
 <div>
-    <form class="form-style" action="{% url 'home' %}" method="GET">
-        <p><label for="id_location">Route Location</label> <input type="search" name="location" required id="id_location" value="{{ location_q }}" placeholder="Search Climing Areas"></p>
-        <p><label for="id_route_type">Route Type</label> <select name="route_type" id="id_route_type" value="{{ route_type_q }}">
-        <option value="trad" selected>trad</option>
-        <option value="sport">sport</option>
-        <option value="boulder">boulder</option>
-        </select></p>
-        <p><label for="id_rating">Route Difficulty</label> <select name="rating" id="id_rating" value="{{ rating_q }}">
+    <form class="form-style" action="{% url 'edit_daytrip' daytrip_pk=daytrip.pk %}" method="GET">
+        <div>
+            <label for="id_location">Route Location</label> <input type="search" name="location" required id="id_location" value="{{ location_q }}" placeholder="Search Climing Areas">
+        </div>
+        <div>
+            <label for="id_route_type">Route Type</label> <select name="route_type" id="id_route_type" value="{{ route_type_q }}">
+            <option value="" selected>--</option>
+            <option value="trad">trad</option>
+            <option value="sport">sport</option>
+            <option value="boulder">boulder</option>
+            </select>
+            <label for="id_rating">Route Difficulty</label> <select name="rating" id="id_rating" value="{{ rating_q }}">
+            <option value="" selected>--</option>
             <optgroup label="Trad/Sport Rating">
-                <option value="5.4" selected>5.4</option>
+                <option value="5.4">5.4</option>
                 <option value="5.5">5.5</option>
                 <option value="5.6">5.6</option>
                 <option value="5.7">5.7</option>
@@ -58,8 +63,7 @@
                 <option value="V9">V9</option>
                 <option value="V10">V10</option>
             </optgroup>
-            </select></p>
-        <div>
+            </select>
             <button class="f6 grow no-underline br-pill ph3 pv2 mb2 dib white bg-dark-green" href="#0"type="submit">Search</button>
         </div>
     </form>
